--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@uploadthing/react": "^7.0.3",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.8",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "next-auth": "^5.0.0-beta.22",
@@ -34,6 +36,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^7.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
