--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.447.0",
-    "next": "14.2.14",
+    "next": "^14.2.15",
     "next-auth": "^5.0.0-beta.22",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
